basic typography and grid setup

--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -21,6 +21,7 @@ head
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
   block stylesheets
     link(rel='stylesheet', href= baseUrl + 'styles/main.css')
+    link(rel='stylesheet', type='text/css', href= '//fast.fonts.net/cssapi/67330240-65d1-4421-80e1-1ed4d5553a91.css')
 
 body
   <!--[if lt IE 9]>
