--- a/src/index.jade
+++ b/src/index.jade
@@ -4,12 +4,8 @@ include _modules/link/link
 
 block content
   .container
-    .yeogurt-info
-      h1 Welcome to Yeogurt!
-      p.
-        Take a look at the
-        #[+link({text: 'documentation'})(href='https://github.com/larsonjj/generator-yeogurt#yeogurt-generator---')]
-        and start mixing up something awesome.
-      p
-        img.logo(src="images/yeogurt-swirl.png", width="75px")
-  code.version v1.5.2
+    .row
+      .offset-by-six.six.columns
+        h1 Product Designer
+        h1 Art Explorer
+        h1 Music Lover
