base typography settings

--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -29,3 +29,8 @@ html
 body
   font-family: $fontFamily-primary, 'Helvetica Neue', 'Helvetica', 'sans-serif'
   color: #222
+  @include typeScale(6)
+  font-weight: $fontWeight-primary-normal
+
+.tagline
+  margin: 0
