--- a/src/index.jade
+++ b/src/index.jade
@@ -6,6 +6,17 @@ block content
   .container
     .row
       .offset-by-six.six.columns
-        h1 Product Designer
-        h1 Art Explorer
-        h1 Music Lover
+        h1.tagline Product Designer
+        h1.tagline Art Explorer
+        h1.tagline Music Lover
+
+    .row
+      .twelve.columns
+        h2 Problem
+        p.
+          Explore how to utilize design data to empower designers to make better decisions, more quickly, with more confidence. With a vast amount of data at hand.
+        p.subtext.
+          With a mixed background of Software Engineering, Human-Computer Interaction and Design Thinking, I aspire to design and build experiences that are useful, pleasant and meaningful.
+        h3 Apropose
+        label Product Ideation. UI/UX. Mobile.
+
