--- a/src/index.jade
+++ b/src/index.jade
@@ -3,20 +3,12 @@ extends _layouts/base
 include _modules/link/link
 
 block content
+  .landing-bg
+
   .container
-    .row
-      .offset-by-six.six.columns
-        h1.tagline Product Designer
-        h1.tagline Art Explorer
-        h1.tagline Music Lover
-
-    .row
-      .twelve.columns
-        h2 Problem
-        p.
-          Explore how to utilize design data to empower designers to make better decisions, more quickly, with more confidence. With a vast amount of data at hand.
-        p.subtext.
-          With a mixed background of Software Engineering, Human-Computer Interaction and Design Thinking, I aspire to design and build experiences that are useful, pleasant and meaningful.
-        h3 Apropose
-        label Product Ideation. UI/UX. Mobile.
-
+    .row.landing-text
+      .offset-by-four.eight.columns
+        label.landing-name Ningxia Zhang
+        h1.landing-tagline Product Designer
+        h1.landing-tagline Art Explorer
+        h1.landing-tagline Music Lover
