basic responsive and color setup

--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -1,14 +1,20 @@
+// Main entry of Sass files
+
 // Normalize Styles
 @import node_modules/normalize.css/normalize
 
-// Skeleton responsive
-@import skeleton
+// Foundation responsive
+@import 'foundation'
 
 // Global variables and styles
 @import typography
+@import colors
 
 // Import Modules
 @import ../_modules/link/link
+
+// Import page styling
+@import landing
 
 // Box sizing partial styles:
 // Apply a natural box layout model to all elements
@@ -27,27 +33,6 @@ html
 // Body global style
 body
   font-family: $fontFamily-primary, 'Helvetica Neue', 'Helvetica', 'sans-serif'
-  color: #222
+  color: $color-grey-1
   @include typeScale(6)
   font-weight: $fontWeight-primary-regular
-
-.landing-text
-  margin-top: 25%
-  text-align: right
-
-.landing-name
-  @include typeScale(5)
-  margin-bottom: 2*$baseline
-  font-weight: $fontWeight-accent-regular
-
-.landing-tagline
-  margin: 0.5*$baseline 0
-
-.landing-bg
-  width: 48%
-  position: absolute
-  top: 0
-  bottom: 0
-  left: 0
-  background: url('../images/landing_bg.jpg') no-repeat center center
-  background-size: cover
