--- a/src/index.jade
+++ b/src/index.jade
@@ -5,9 +5,9 @@ include _modules/link/link
 block content
   .landing-bg
 
-  .container
-    .row.landing-text
-      .offset-by-four.eight.columns
+  .row
+    .large-offset-5.large-7.columns
+      .landing-text
         label.landing-name Ningxia Zhang
         h1.landing-tagline Product Designer
         h1.landing-tagline Art Explorer
