--- a/src/_styles/typography.sass
+++ b/src/_styles/typography.sass
@@ -7,6 +7,8 @@ $fontFamily-accent: 'MTI Letter Gothic W01'
 $baseline: 1.5rem
 
 // type scale
+// Base: 1.125rem
+// Ratio: 1.333
 $fontSize-1: 3.552rem // 56.832px
 $fontSize-2: 2.665rem // 42.64px
 $fontSize-3: 1.999rem // 32px
