--- a/src/_styles/colors.sass
+++ b/src/_styles/colors.sass
@@ -1,7 +1,8 @@
 // Global color variables
 
-$color-grey-1: #222;
-$color-grey-2: #777;
-$color-grey-3: #aaa;
+$color-grey-1: #222
+$color-grey-2: #777
+$color-grey-3: #aaa
 
-$color-primary: #7259F0;
+$color-primary: #7259F0
+$color-light-bg: #F6F9FB
