--- a/src/_styles/landing.sass
+++ b/src/_styles/landing.sass
@@ -20,4 +20,4 @@
   left: 0
   background: url('../images/landing_bg.jpg') no-repeat center center
   background-size: cover
-  z-index: -1
+  z-index: $zIndex-negative
