basic category structures

--- a/src/_modules/menu/menu.jade
+++ b/src/_modules/menu/menu.jade
@@ -12,13 +12,13 @@ mixin menu(spec)
       nav
         ul
           li
-            a(href='#') About
+            a(href='/about') About
           li
-            a(href='#') Design
+            a(href='/designs') Designs
           li
-            a(href='#') Artworks
+            a(href='/artworks') Artworks
           li
-            a(href='#') Writings
+            a(href='/writings') Writings
           li
             a(href='#') Music
 
