--- a/src/_modules/menu/menu.sass
+++ b/src/_modules/menu/menu.sass
@@ -37,7 +37,7 @@ $width--menuButton: 36px
     position: absolute
     top: 0
     left: 0
-    transition: all .35 ease
+    transition: all .35s ease
     cursor: pointer
 
     &:nth-of-type(2)
