--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -1,7 +1,7 @@
 // Main entry of Sass files
 
 // Normalize Styles
-@import node_modules/normalize.css/normalize
+@import 'node_modules/normalize.css/normalize'
 
 // Foundation responsive
 @import 'foundation'
@@ -11,35 +11,13 @@
 @import 'colors'
 @import 'z-index'
 
+// Global styles
+@import 'global'
+
 // Import Modules
-@import ../_modules/link/link
-@import ../_modules/menu/menu
+@import '../_modules/link/link'
+@import '../_modules/menu/menu'
+@import '../_modules/logo/logo'
 
 // Import page styling
-@import landing
-
-// Box sizing partial styles:
-// Apply a natural box layout model to all elements
-*,
-*:before,
-*:after
-  -moz-box-sizing: border-box
-  -webkit-box-sizing: border-box
-  box-sizing: border-box
-
-// html is set to 100% so that all the REM measurements throughout
-// are based on 16px sizing. So basically 1rem = 16px :)
-html
-  font-size: 100%
-
-// Body global style
-body
-  font-family: $fontFamily-primary, 'Helvetica Neue', 'Helvetica', 'sans-serif'
-  color: $color-grey-1
-  @include typeScale(6)
-  font-weight: $fontWeight-primary-regular
-
-.menu
-  position: fixed
-  top: $baseline
-  right: 2*$baseline
+@import 'landing'
