--- a/src/_styles/typography.sass
+++ b/src/_styles/typography.sass
@@ -43,6 +43,9 @@ $fontWeight-accent-bold: 700
     font-size: $fontSize-6
     line-height: $baseline
 
+h1, h2, p, h3, label, p
+  margin: 0
+
 h1
   @include typeScale(1)
   font-weight: $fontWeight-primary-bold
@@ -56,7 +59,7 @@ h2
   margin-bottom: $baseline
 
 p.subtext
-  @include typeScale(3)
+  @include typeScale(4)
   font-weight: $fontWeight-primary-regular
   margin-bottom: $baseline
 
