--- a/src/_modules/menu/menu.jade
+++ b/src/_modules/menu/menu.jade
@@ -9,16 +9,18 @@ mixin menu(spec)
       span.bottom
 
     .menu-overlay
-      nav
-        ul
-          li
-            a(href='/about') About
-          li
-            a(href='/designs') Designs
-          li
-            a(href='/artworks') Artworks
-          li
-            a(href='/writings') Writings
-          li
-            a(href='#') Music
+      .row
+        .large-12.columns
+          nav
+            ul
+              li
+                a(href='/about') About
+              li
+                a(href='/designs') Designs
+              li
+                a(href='/artworks') Artworks
+              li
+                a(href='/writings') Writings
+              li
+                a(href='#') Music
 
