--- a/src/_modules/menu/menu.sass
+++ b/src/_modules/menu/menu.sass
@@ -79,7 +79,7 @@ $width--menuButton: 36px
         animation-delay: .55s
 
   nav
-    margin: 3*$baseline 2*$baseline
+    margin: 3*$baseline 0
 
   li
     display: block
