--- a/src/_styles/global.sass
+++ b/src/_styles/global.sass
@@ -9,6 +9,10 @@
   -webkit-box-sizing: border-box
   box-sizing: border-box
 
+ul
+  margin: 0
+  padding: 0
+
 // html is set to 100% so that all the REM measurements throughout
 // are based on 16px sizing. So basically 1rem = 16px :)
 html
