get the structure sorted out, can render markdown files

--- a/src/_layouts/category.jade
+++ b/src/_layouts/category.jade
@@ -9,7 +9,7 @@ include ../_modules/menu/menu
 block content
 
   //- Provides layout level markup
-  +logo(class='logo')
+  +logo('../')(class='logo')
   +menu(class='menu')
 
   .row.row--top
