--- a/src/_styles/typography.sass
+++ b/src/_styles/typography.sass
@@ -65,7 +65,7 @@ p.subtext
 
 h3
   @include typeScale(4)
-  font-weight: $fontWeight-primary-bold
+  font-weight: $fontWeight-primary-medium
   letter-spacing: 0.012em
   margin-bottom: 0.5*$baseline
 
