--- a/src/_modules/logo/logo.jade
+++ b/src/_modules/logo/logo.jade
@@ -1,7 +1,7 @@
-mixin logo(spec)
+mixin logo(baseUrl, spec)
   - spec = spec || {}
   - spec.__class = spec.__class || ''
 
   div(class=spec.__class)&attributes(attributes)
     a(href='/')
-      img(src='../images/logo.svg', class='logo-img')
+      img(src= baseUrl + 'images/logo.svg', class='logo-img')
