writing section content

--- a/src/_styles/global.sass
+++ b/src/_styles/global.sass
@@ -13,6 +13,16 @@ ul
   margin: 0
   padding: 0
 
+a
+  color: $color-primary
+  text-decoration: none
+  opacity: 1
+  transition: opacity .35s ease
+
+  &:hover
+    opacity: 0.7
+
+
 // html is set to 100% so that all the REM measurements throughout
 // are based on 16px sizing. So basically 1rem = 16px :)
 html
@@ -37,4 +47,8 @@ body
 
 .row--top
   margin-top: 8*$baseline
+
+.category-content
+  margin: 3*$baseline 0
+
 
