--- a/src/index.jade
+++ b/src/index.jade
@@ -4,14 +4,18 @@ include _modules/link/link
 include _modules/menu/menu
 
 block content
-  .landing-bg
+
+  h3.landing-name NINGXIA ZHANG
+
+  .landing-image-half
+
+  .landing-text-half
+    .landing-text
+      label.landing-label Full-time
+      h1.landing-tagline Product #[a(href='/designs') Design]er
+      label.landing-label Sometimes
+      h1.landing-tagline #[a(href='/artworks') Art] Explorer
+      label.landing-label Always
+      h1.landing-tagline #[a(href='/music') Music] Lover
 
   +menu(class='menu')
-
-  .row
-    .large-offset-5.large-7.columns
-      .landing-text
-        label.landing-name Ningxia Zhang
-        h1.landing-tagline Product Designer
-        h1.landing-tagline Art Explorer
-        h1.landing-tagline Music Lover
