initial content for artworks

--- a/src/_layouts/category.sass
+++ b/src/_layouts/category.sass
@@ -1,5 +1,11 @@
-// Styles for the writing section
+// Category page styling
 
+// Styles for project, both for designs and artworks
+.project
+  display: inline-block
+  max-width: 49.5%
+
+// Styles for the writing section
 .post
   h3
     font-weight: $fontWeight-primary-medium
@@ -13,5 +19,3 @@
   font-family: $fontFamily-accent
   color: $color-grey-2
   font-size: 0.875rem // to adjust the size of letter gothic, which looks much bigger
-
-
