--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -20,6 +20,8 @@
 @import '../_modules/menu/menu'
 @import '../_modules/logo/logo'
 
+// Import Layouts
+@import '../_layouts/category'
+
 // Import page styling
 @import 'landing'
-@import '../writings/writings'
