--- a/src/writings/index.jade
+++ b/src/writings/index.jade
@@ -18,4 +18,4 @@ block category-content
         h3
           a(href= post.link, target= '_blank')= post.title
         p.post-preview= post.preview
-        .post-date= post.date
+        label.post-date= post.date
