images for yogurt, styling improvements on project page

--- a/src/_layouts/project.sass
+++ b/src/_layouts/project.sass
@@ -4,6 +4,17 @@
   margin-top: 6*$baseline
   margin-bottom: 3*$baseline
 
+  h1
+    text-align: center
+
+  h3
+    text-align: center
+    width: 100%
+    max-width: 24rem
+    margin: 0 auto
+    font-weight: $fontWeight-primary-regular
+    color: $color-grey-3
+
   // markdown styling
   ul
     margin-left: $baseline
