--- a/src/_styles/typography.sass
+++ b/src/_styles/typography.sass
@@ -12,7 +12,7 @@ $baseline: 1.5rem
 $fontSize-1: 3.552rem // 56.832px
 $fontSize-2: 2.665rem // 42.64px
 $fontSize-3: 1.999rem // 32px
-$fontSize-4: 1.5rem // 24px
+$fontSize-4: 1.375rem // 22px, should be 24px
 $fontSize-5: 1.125rem // 18px for futura's small x-height
 $fontSize-6: 1rem // 16px
 $fontSize-7: 0.875rem // 14px for letter gothic's big size
