--- a/src/artworks/voices/index.jade
+++ b/src/artworks/voices/index.jade
@@ -7,6 +7,6 @@ block config
 block project-content
   .project-content
     .row
-      .large-12.columns
-        a(href='/artworks') ← Back to my artworks
+      .large-10.medium-12.large-offset-1.columns
         include:markdown content.md
+        a(href='/artworks') ← Back to my artworks
