--- a/src/designs/index.jade
+++ b/src/designs/index.jade
@@ -12,8 +12,11 @@ block description
     With a mixed background of Software Engineering, Human-Computer Interaction and Design Thinking, I aspire to design and build experiences that are useful, pleasant and meaningful.
 
 block category-content
-  each project in site.data.designs
-    div.project
-      a(href='/designs/' + project.name)
-        h3= project.name
-      label= project.labels
+  .category-content.clearfix
+    each project in site.data.designs
+      div.project
+        a(href= project.link)
+          img(src= project.thumbnail, class='project-thumbnail')
+        h3.project-name
+          a(href= project.link)= project.name
+        label.project-label= project.label
