new content added for start.home

--- a/src/_layouts/project.sass
+++ b/src/_layouts/project.sass
@@ -12,9 +12,13 @@
     width: 100%
     max-width: 24rem
     margin: 0 auto
+    margin-bottom: $baseline
     font-weight: $fontWeight-primary-regular
     color: $color-grey-3
 
   // markdown styling
   ul
     margin-left: $baseline
+
+  img
+    margin: $baseline 0
