--- a/src/_modules/menu/menu.jade
+++ b/src/_modules/menu/menu.jade
@@ -20,6 +20,8 @@ mixin menu(spec)
               li
                 a(href='/artworks') Artworks
               li
+                a(href='/coding') Coding
+              li
                 a(href='/writings') Writings
               li
                 a(href='#') Music
