--- a/src/_modules/menu/menu.sass
+++ b/src/_modules/menu/menu.sass
@@ -78,6 +78,9 @@ $width--menuButton: 36px
       &:nth-of-type(5)
         animation-delay: .55s
 
+      &:nth-of-type(6)
+        animation-delay: .6s
+
   nav
     margin: 3*$baseline 0
 
