--- a/src/_styles/typography.sass
+++ b/src/_styles/typography.sass
@@ -24,7 +24,8 @@ $fontWeight-primary-bold: 500
 $fontWeight-accent-regular: 400
 $fontWeight-accent-bold: 700
 
-$letterSpacing-primary: 0.012em
+$letterSpacing-1: 0.012em // for big font sizes
+$letterSpacing-2: 0.02em // for small font sizes
 
 @mixin typeScale($rank: 6)
   @if $rank == 1
@@ -55,13 +56,13 @@ h1, h2, p, h3, label, p
 h1
   @include typeScale(1)
   font-weight: $fontWeight-primary-bold
-  letter-spacing: $letterSpacing-primary
+  letter-spacing: $letterSpacing-1
   margin-bottom: $baseline
 
 h2
   @include typeScale(3)
   font-weight: $fontWeight-primary-bold
-  letter-spacing: $letterSpacing-primary
+  letter-spacing: $letterSpacing-1
   margin-bottom: $baseline
 
 p.subtext
@@ -72,7 +73,7 @@ p.subtext
 h3
   @include typeScale(4)
   font-weight: $fontWeight-primary-medium
-  letter-spacing: $letterSpacing-primary
+  letter-spacing: $letterSpacing-1
   margin-bottom: 0.5*$baseline
 
 label
@@ -83,6 +84,6 @@ label
 p
   @include typeScale(5)
   margin-bottom: $baseline
-  letter-spacing: $letterSpacing-primary
+  letter-spacing: $letterSpacing-2
 
 
