--- a/src/index.jade
+++ b/src/index.jade
@@ -12,10 +12,10 @@ block content
   .landing-text-half
     .landing-text
       label.landing-label Full-time
-      h1.landing-tagline Product #[a(href='/designs') Design]er
+      h1.landing-tagline Product #[a(class='link--prominent', href='/designs') Design]er
       label.landing-label Sometimes
-      h1.landing-tagline #[a(href='/artworks') Art] Explorer
+      h1.landing-tagline #[a(class='link--prominent', href='/artworks') Art] Explorer
       label.landing-label Always
-      h1.landing-tagline #[a(href='/music') Music] Lover
+      h1.landing-tagline #[a(class='link--prominent', href='/music') Music] Lover
 
   +menu(class='menu')
