--- a/src/_layouts/category.jade
+++ b/src/_layouts/category.jade
@@ -1,7 +1,6 @@
 extend ./base
 
 include ../_modules/logo/logo
-include ../_modules/menu/menu
 
 //- Add extra stylesheets
 
@@ -9,7 +8,7 @@ block content
 
   //- Provides layout level markup
   +logo('../')(class='logo')
-  +menu(class='menu')
+  block menu
 
   .row.row--top
     .large-4.columns
