--- a/src/artworks/index.jade
+++ b/src/artworks/index.jade
@@ -4,6 +4,11 @@ block config
   //- Correct base url pathing for this page
   - var baseUrl = '../'
 
+include ../_modules/menu/menu
+
+block menu
+  +menu('artworks')(class='menu')
+
 block title
   h1 Artworks
 
