menu contact styling

--- a/src/_modules/menu/menu.jade
+++ b/src/_modules/menu/menu.jade
@@ -26,3 +26,18 @@ mixin menu(active, spec)
               li
                 a(href='#' class= active === 'music'? 'is-active': '') Music
 
+      .row
+        .large-12.columns
+          .menu-contact
+            label Say Hi
+            p
+              a(href='mailto:ningxia.z@gmail.com') ningxia.z@gmail.com
+          .menu-contact
+            label Connect With Me
+            p
+              a(href='https://www.instagram.com/ningxiaz/', target='_blank') Instagram
+              a(href='https://twitter.com/ningxiaz', target='_blank') Twitter
+              a(href='https://www.linkedin.com/in/ningxiazhang', target='_blank') LinkedIn
+              a(href='https://medium.com/@ningxiaz', target='_blank') Medium
+
+
