--- a/src/_layouts/category.jade
+++ b/src/_layouts/category.jade
@@ -10,14 +10,14 @@ block content
   +logo('../')(class='logo')
   block menu
 
-  .row.row--top
+  .row.row--top.content--fadeIn
     .large-4.columns
       block title
 
     .large-8.columns
       block description
 
-  .row
+  .row.content--fadeIn
     .large-12.columns
       block category-content
 
