--- a/src/_layouts/project.sass
+++ b/src/_layouts/project.sass
@@ -3,6 +3,7 @@
 .project-content
   margin-top: 6*$baseline
   margin-bottom: 3*$baseline
+  @extend .content--fadeIn
 
   h1
     text-align: center
