--- a/src/_modules/menu/menu.jade
+++ b/src/_modules/menu/menu.jade
@@ -16,13 +16,13 @@ mixin menu(active, spec)
               li
                 a(href='/about' class= active === 'about'? 'is-active': '') About
               li
-                a(href='/designs' class= active === 'designs'? 'is-active': '') Designs
+                a(href='/design' class= active === 'design'? 'is-active': '') Design
               li
-                a(href='/artworks' class= active === 'artworks'? 'is-active': '') Artworks
+                a(href='/art' class= active === 'art'? 'is-active': '') Art
               li
-                a(href='/coding' class= active === 'coding'? 'is-active': '') Coding
+                a(href='/code' class= active === 'code'? 'is-active': '') Code
               li
-                a(href='/writings' class= active === 'writings'? 'is-active': '') Writings
+                a(href='/writing' class= active === 'writing'? 'is-active': '') Writing
               li
                 a(href='#' class= active === 'music'? 'is-active': '') Music
 
