--- a/src/writing/index.jade
+++ b/src/writing/index.jade
@@ -7,10 +7,10 @@ block config
 include ../_modules/menu/menu
 
 block menu
-  +menu('writings')(class='menu')
+  +menu('writing')(class='menu')
 
 block title
-  h1 Writings
+  h1 Writing
 
 block description
   p.subtext.
