--- a/src/design/index.jade
+++ b/src/design/index.jade
@@ -7,10 +7,10 @@ block config
 include ../_modules/menu/menu
 
 block menu
-  +menu('designs')(class='menu')
+  +menu('design')(class='menu')
 
 block title
-  h1 Designs
+  h1 Design
 
 block description
   p.subtext.
