1st pass about page

--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -21,6 +21,7 @@
 @import '../_modules/link/link'
 @import '../_modules/menu/menu'
 @import '../_modules/logo/logo'
+@import '../_modules/cover/cover'
 
 // Import Layouts
 @import '../_layouts/category'
@@ -28,3 +29,4 @@
 
 // Import page styling
 @import 'landing'
+@import '../about/about'
