--- a/src/about/index.jade
+++ b/src/about/index.jade
@@ -6,18 +6,64 @@ block config
 
 include ../_modules/logo/logo
 include ../_modules/menu/menu
+include ../_modules/cover/cover
 
 //- Add extra stylesheets
 
 block content
 
-  //- Provides layout level markup
+  .row.row--top.content--fadeIn
+    .large-4.columns
+      h1 About
+
+    .large-8.columns
+      p.subtext.
+        I’m Ningxia Zhang, a product designer living in San Francisco Bay Area, from China. I create digital products that bring convenience, delight and meaning to people’s lives. With a mixed background of Computer Science, Human-Computer Interaction and Entrepreneurship, I bring a holistic perspective to design, and can take a product idea from concept to life.
+
+  +cover('../images/portrait.jpg')(class='about-portrait content--fadeIn')
+
+  .about-section
+    .row.content--fadeIn
+      .large-8.columns
+        h2 My Story
+        p.
+          I was born and raised in #[a(href='https://en.wikipedia.org/wiki/Yichang', target='_blank') Yichang], a small city in central China. As a child, I loved drawing and creating little art pieces. Later in middle school I gave up all my creative pursuits when I was found to be talented in maths and science, and everyone told me that art was for people who weren’t smart enough to do maths.
+
+        p.
+          So I ended up as a Software Engineering major in one of the best universities in China. I liked understanding abstract concepts and solving complex problems, but something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
+
+        p.
+          That led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science etc. I took classes ranging from machine learning to designing for theaters, and got fully immersed in the creative and entrepreneurial environment. It was quite challenging, especially for a newly-arrived international student, but the overall experience was transformative and empowering.
+
+        p.
+          After graduation, I joined an early-stage startup founded by Stanford HCI researchers as the Director of User Experience. My time there was a tremendous learning experience, not only in design, but also in company culture, collaboration, hiring, marketing and how startup works.
+
+  .about-section
+    .row.content--fadeIn
+      .large-12.columns
+        h2 I'm currently looking for full-time product design opportunities. Take my resume #[a(href='https://www.dropbox.com/s/una1rb4b7p1zela/Resume-Ningxia.pdf?dl=0', target='_blank', class='link--prominent') here].
+
+    .row.content--fadeIn.about-contact
+      .large-3.columns
+        a(href='mailto:ningxia.z@gmail.com') ningxia.z@gmail.com
+        label Interested in getting in touch? Email is the best way.
+
+      .large-3.columns
+        a(href='https://www.instagram.com/ningxiaz/', target='_blank') Instagram
+        label I'm no photographer, but you can learn more about what I'm like.
+
+      .large-3.columns
+        a(href='https://twitter.com/ningxiaz', target='_blank') Twitter
+        label Mostly updates, not talktive.
+
+      .large-3.columns
+        a(href='https://www.linkedin.com/in/ningxiazhang', target='_blank') LinkedIn
+        label Let's connect :)
+
+
   +logo('../')(class='logo')
   +menu('about')(class='menu')
 
-  .row.row--top
-    .large-12.columns
-      h1 About Ningxia
 
 //- // Add extra scripts
 //- block append scripts
