--- a/src/about/index.jade
+++ b/src/about/index.jade
@@ -27,13 +27,13 @@ block content
       .large-8.columns
         h2 My Story
         p.
-          I was born and raised in #[a(href='https://en.wikipedia.org/wiki/Yichang', target='_blank') Yichang], a small city in central China. As a child, I loved drawing and creating little art pieces. Later in middle school I gave up all my creative pursuits when I was found to be talented in maths and science, and everyone told me that art was for people who weren’t smart enough to do maths.
+          I was born and raised in #[a(href='https://en.wikipedia.org/wiki/Yichang', target='_blank') Yichang], a small city in central China. As a child, I loved drawing and creating little art pieces. Later, in middle school I gave up all my creative pursuits when I was found to be talented in math and science, and everyone told me that art was for people who weren’t smart enough to do math.
 
         p.
-          So I ended up as a Software Engineering major in one of the best universities in China. I liked understanding abstract concepts and solving complex problems, but something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
+          So I ended up as a Software Engineering major in one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
 
         p.
-          That led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science etc. I took classes ranging from machine learning to designing for theaters, and got fully immersed in the creative and entrepreneurial environment. It was quite challenging, especially for a newly-arrived international student, but the overall experience was transformative and empowering.
+          This led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science, etc. I took classes ranging from machine learning to designing for theater experiences, and got fully immersed in the creative and entrepreneurial environment. It was quite challenging, especially for a newly-arrived international student, but the overall experience was transformative and empowering.
 
         p.
           After graduation, I joined an early-stage startup founded by Stanford HCI researchers as the Director of User Experience. My time there was a tremendous learning experience, not only in design, but also in company culture, collaboration, hiring, marketing and how startup works.
