unifying names of the categories

--- a/src/code/index.jade
+++ b/src/code/index.jade
@@ -18,7 +18,7 @@ block description
 
 block category-content
   .category-content.clearfix
-    each project in site.data.coding
+    each project in site.data.code
       div.project
         a(href= project.link)
           img(src= project.thumbnail, class='project-thumbnail')
