--- a/src/index.jade
+++ b/src/index.jade
@@ -12,9 +12,9 @@ block content
   .landing-text-half
     .landing-text
       label.landing-label Full-time
-      h1.landing-tagline Product #[a(class='link--prominent', href='/designs') Design]er
+      h1.landing-tagline Product #[a(class='link--prominent', href='/design') Design]er
       label.landing-label Sometimes
-      h1.landing-tagline #[a(class='link--prominent', href='/artworks') Art] Explorer
+      h1.landing-tagline #[a(class='link--prominent', href='/art') Art] Explorer
       label.landing-label Always
       h1.landing-tagline #[a(class='link--prominent', href='/music') Music] Lover
 
