--- a/src/art/missing-flight/index.jade
+++ b/src/art/missing-flight/index.jade
@@ -9,4 +9,4 @@ block project-content
     .row
       .large-10.medium-12.large-offset-1.columns
         include:markdown content.md
-        a(href='/artworks') ← Back to my artworks
+        a(href='/art') ← Back to my art
