--- a/src/design/index.jade
+++ b/src/design/index.jade
@@ -18,7 +18,7 @@ block description
 
 block category-content
   .category-content.clearfix
-    each project in site.data.designs
+    each project in site.data.design
       div.project
         a(href= project.link)
           img(src= project.thumbnail, class='project-thumbnail')
