--- a/src/design/synapp/index.jade
+++ b/src/design/synapp/index.jade
@@ -9,4 +9,4 @@ block project-content
     .row
       .large-10.medium-12.large-offset-1.columns
         include:markdown content.md
-        a(href='/designs') ← Back to my designs
+        a(href='/design') ← Back to my design
